test/test2.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: test-ingress
spec:
  tls:
    - secretName: test-cert
  rules:
    - host: test.sachiniyer.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
---
apiVersion: cert-manager.io/v1
kind: Certificate
metadata:
  name: test-cert
  namespace: test
spec:
  commonName: test.sachiniyer.com
  secretName: test-cert
  dnsNames:
    - test.sachiniyer.com
  issuerRef:
    name: letsencrypt-prod-dns
    kind: ClusterIssuer
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    run: nginx
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: nginx

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html-volume
              mountPath: /usr/share/nginx/html
      volumes:
        - name: html-volume
          configMap:
            name: test-html
