test/testingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: health-ingress
  namespace: health
spec:
  ingressClassName: nginx
  rules:
  - host: health.sachiniyer.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: health-nginx
            port:
              number: 80
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
  - hosts:
    - health.sachiniyer.com
    secretName: health-nginx-secret
---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  annotations:
#    # add an annotation indicating the issuer to use.
#    cert-manager.io/cluster-issuer: letsencrypt-prod
#  name: test-ingress
#  namespace: health
#spec:
#  ingressClassName: nginx
#  rules:
#  - host: test.sachiniyer.com
#    http:
#      paths:
#      - pathType: Prefix
#        path: /
#        backend:
#          service:
#            name: health-nginx
#            port:
#              number: 80
#  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
#  - hosts:
#    - test.sachiniyer.com
#    secretName: test-nginx-secret
